# quantum-machine-learning

./: .dashboard.yaml  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Digit-Classifier-main/: README.md  cl_model.ipynb  environment.yml  eval.ipynb  polycomp.ipynb  q_model.ipynb  quad_comp.ipynb  quadcomp.ipynb  quadratic.ipynb  temp.ipynb  test.ipynb  train.ipynb
Digit-Classifier-main/models/: cnet.py  polynet.py  qnet.py  quadnet.py  switchable.py
Digit-Classifier-main/preprocessing/: mnist.py
Digit-Classifier-main/qintegration/: qcircuits.py  qmodule.py  qutils.py
Digit-Classifier-main/train/: eval.py  (+3 more)
classifiers/: LAYERS.md  __init__.py  __main__.py  base_model.py  connections.py  dataset_plugin.py  evaluator.py  layers.py  losses.py  model_registry.py  persistence.py  plugin_registry.py  predictor.py  qiskit_layers.py  server.py  trainer.py  training_config.py  types.py
docs/: api.md  architecture.md  models.md
tests/: conftest.py  test_accuracy_claims.py  test_advanced_models.py  test_base_model.py  test_cors.py  test_documentation.py  test_evaluator.py  test_integration.py  test_iris.py  test_layers.py  test_linear_model.py  test_model.py  test_model_registry.py  test_persistence.py  test_phase2_pipeline.py  test_phase3_crosscutting.py  test_plugin_registry.py  test_predictor.py  test_qiskit_layers.py  test_routes.py  test_routes_advanced.py  test_svm_model.py  test_trainer.py  test_training_config.py
(+24 files in other folders)
