[project]
name = "quantum-machine-learning"
version = "0.2.0"
description = "Multi-dataset classifier platform comparing classical and quantum-hybrid neural networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andy Peterson"},
]
keywords = [
    "quantum-computing",
    "machine-learning",
    "pytorch",
    "flask",
    "mnist",
    "neural-networks",
]

dependencies = [
    "flask>=3.0",
    "flask-cors>=6.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.26",
    "Pillow>=12.0",
    "mistune>=3.0",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
    "pennylane>=0.35",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
